--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^4.4.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
@@ -61,7 +60,11 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
+    "@types/react-beautiful-dnd": "^13.1.3",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest-sonar-reporter": "^2.0.0",
+    "prettier": "^2.8.2",
     "sonarqube-scanner": "^2.9.1"
   },
   "jestSonar": {
